<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_units" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@android:color/black"></View>

    <RelativeLayout
        android:id="@+id/hour_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_dialog_item">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/hour" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/minute_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_dialog_item">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/minute" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_dialog_item">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/second" />

    </RelativeLayout>

</LinearLayout>