<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_settings">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorSettings">

        <ImageView
            android:id="@+id/img_settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/ic_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img_settings"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/save_button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_save">

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:background="@android:color/white"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/units"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edit_units"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/background_edit"
                android:editable="false"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/hour"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/time_length"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edit_value"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/background_edit"
                android:gravity="center_vertical"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:text="4"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/share_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:layout_weight="5"
            android:background="@drawable/button_share_state"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/rate_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:layout_weight="5"
            android:background="@drawable/button_rate_state"
            android:text="@string/rate_us"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>